--- a/nodejs-deployment.yaml
+++ b/nodejs-deployment.yaml
@@ -5,7 +5,7 @@ metadata:
   labels:
     app: nodejs-app
 spec:
-  replicas: 1
+  replicas: 7
   selector:
     matchLabels:
       app: nodejs-app
@@ -25,6 +25,10 @@ spec:
             cpu: 300m
           requests:
             cpu: 150m
+          limits:
+            memory: "400Mi"
+          requests:
+            memory: "50Mi" 
         imagePullPolicy: Always
       imagePullSecrets:
       -  name: ecr-registry-key
