Deployment instructions and autoscler file chnage

--- a/memory-autoscaler.yaml
+++ b/memory-autoscaler.yaml
@@ -6,7 +6,7 @@ spec:
   maxReplicas: 15
   minReplicas: 10
   scaleTargetRef:
-    apiVersion: extensions/v1beta1
+    apiVersion: apps/v1
     kind: Deployment
     name: node-app-deployment
   metrics:
